# micBridgeWinDriver

./: CMakeLists.txt  Deployment.cmake  MicBridge.sln
micBridge/: AdapterCommon.cpp  AdapterCommon.h  Atomic.h  Driver.cpp  EndpointMinipair.h  InterlockedIntrinsic.h  KsAudioProcessingAttribute.h  LockFreeRingBuffer.h  Macros.h  MicBridge.inf  MicrophoneWaveProperties.h  MinipairDescriptorFactory.cpp  MinipairDescriptorFactory.h  MiniportWaveRT.cpp  MiniportWaveRT.h  MiniportWaveRTStream.cpp  MiniportWaveRTStream.h  MiniportWaveRTStreamAudioEngineNode.cpp  RingBuffer.cpp  RingBuffer.h  SubdeviceCache.cpp  SubdeviceHelper.cpp  SubdeviceHelper.h  TypeTraits.h  micBridge.vcxproj  micBridge.vcxproj.filters
